syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service refund {
    //获取退款列表
    rpc  GetRefundInfo(GetRefundReq) returns (GetRefundResp){
        option (google.api.http) ={
            get:"/GetRefundList"
        };
    };
    //提交退款订单
    rpc  CreateReFundInfo(CreateReFundReq) returns (CreateReFundResp){
        option (google.api.http) ={
            post:"/CreateReFundInfo"
            body:"*"
        };
    };
    //删除退款订单
    rpc  DelRefundinfo(DelRefundReq) returns (DelRefundResp){
        option (google.api.http) ={
            delete:"/DelRefundinfo"
        };
    };
    //提交成功退款
    rpc  RefundSuccess(RefundSuccessReq) returns (RefundSuccessResp){
        option (google.api.http) ={
            post:"/RefundSuccess"
            body:"*"
        };
    };
}

message  GetRefundReq {
    // 返回数量
    int64 limit = 1;
    // 返回数据开始数
    int64 offset = 2;
    // 退款订单ID
    int64 ID = 3;
    // 退款订单状态
    int64 status = 4;
    // 支付订单ID
    int64 PID = 5;
    // 订单ID
    int64 OID = 6;
    // 退款方式 1银行卡 2支付宝 3微信
    int64 way = 7;
    // 开始时间
    int64 startTime = 8;
    // 结束时间
    int64 endTime = 9;
}

message GetRefundResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
    // 检索数据总数
    int64 Allnum =3;
    // 数据数列
    repeated GetRefundInfo Data =4;
}

message GetRefundInfo {
    // 退款订单ID
    int64 ID = 1; 
    // 商品订单ID
    int64 OID = 2; 
    // 商品支付金额
    int64 oprice = 3; 
    // 退款金额
    int64 Price = 4; 
    // 退款方式 1银行卡 2支付宝 3微信
    int64 Way = 5; 
    // 退款账号
    string Number  = 6; 
    // 退款状态
    int64 Status = 7; 
    // 创建时间
    int64 CreateTime = 8; 
}

message CreateReFundReq {
    // 商品订单ID
    int64 OID = 1;
    // 退款方式 1银行卡 2支付宝 3微信
    int64 way = 2;
    // 退款账号
    string number = 3;
    // 退款金额
    int64 price =4;
}

message CreateReFundResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
    // 退款订单ID
    int64 ID = 3;
}

message DelRefundReq {
    // 退款订单ID
    int64 ID = 1;
}

message DelRefundResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
}

message RefundSuccessReq {
    // 退款订单ID
    int64 ID = 1;
    // 退款金额
    int64 price = 2;
    // 退款方式 1银行卡 2支付宝 3微信
    int64 way = 3;
    // 退款账号
    string number = 4;
    // 退款流水号
    string serial  = 5;
}

message RefundSuccessResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
}